Refactor storage stress to rely on perf base classes (#37715)
* Rewrite storage stress tests to rely on perf test infra